openshift/dbclient-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: dbclient
  name: dbclient
spec:
  replicas: 1
  selector:
    io.kompose.service: dbclient
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: dbclient
    spec:
      containers:
        - image: ' '
          name: dbclient
          resources: {}
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - dbclient
        from:
          kind: ImageStreamTag
          name: dbclient:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
