openshift/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - name: "db3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
