openshift/dbmon-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: dbmon
  name: dbmon
spec:
  ports:
    - name: "db3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: dbmon
status:
  loadBalancer: {}
