openshift/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  ports:
    - name: "wordpress80"
      port: 80
      targetPort: 80
    - name: "wordpress8080"
      port: 8080
      targetPort: 8080
    - name: "wordpress9100"
      port: 9100
      targetPort: 9100
    - name: "wordpress9995"
      port: 9995
      targetPort: 9995
    - name: "wordpress9256"
      port: 9256
      targetPort: 9256
  selector:
    io.kompose.service: wordpress
status:
  loadBalancer: {}
